--- a/fungus.kv
+++ b/fungus.kv
@@ -50,12 +50,12 @@
 	size: ghost_grid.size
 	TetroGrid:
 		id: ghost_grid
-	#Image:
-	#	source: 'atlas://Green/ghost/x'
 
 <NewPieceBox>:
 	size_hint_x: None
+	size_hint_y: None
 	width: 100
+	height: 100
 	center: self.parent.center
 	canvas:
 		Line:
@@ -65,17 +65,14 @@
 	new_piece_box: new_piece_box
 	new_piece_grid: new_piece_grid
 	orientation: 'vertical'
-	size_hint_y: None
-	height: 320
+	#size_hint_y: None
+	#height: 320
 	Label:
 		center_x: self.parent.center_x
 		y: self.parent.top - self.height
 		text: 'Algae'
 	NewPieceBox:
 		id: new_piece_box
-	#Image:
-	#	source: 'atlas://Green/home/x'
-	#	center: self.parent.center
 	TetroGrid:
 		id: new_piece_grid
 		center: self.parent.center
@@ -85,7 +82,6 @@
 		text: 'Bites: 0'
 
 <FungusGame>:
-	#player1_panel: player1_panel
 	side_panel: side_panel
 	ggview: ggview
 	BoxLayout:
@@ -95,20 +91,6 @@
 			orientation: 'vertical'
 			size_hint_x: None
 			width: 320
-			#PlayerWidget:
-			#	id: player1_panel
-			#HorizLine:
-			#Label:
-			#	text: 'E Coli'
-			#	height: 160
-			#HorizLine:
-			#Label:
-			#	text: 'Penicillium'
-			#	height: 160
-			#HorizLine:
-			#Label:
-			#	text: 'Nanites'
-			#	height: 160
 		VertLine:
 		StencilView:
 			GameGridView:
