--- a/fungus.kv
+++ b/fungus.kv
@@ -52,14 +52,18 @@
 		id: ghost_grid
 
 <NewPieceBox>:
+	grid: grid
 	size_hint_x: None
 	size_hint_y: None
-	width: 100
-	height: 100
-	#center: self.parent.center
+	width: 136
+	height: 136
+	x: 304-self.width
 	canvas:
 		Line:
 			points: [self.x,self.y, self.x+self.width,self.y, self.x+self.width,self.y+self.height, self.x,self.y+self.height, self.x,self.y]
+	TetroGrid:
+		id: grid
+		center: self.parent.center
 
 <PlayerWidget>:
 	#new_piece_box: new_piece_box
