--- a/fungus.kv
+++ b/fungus.kv
@@ -72,6 +72,7 @@
 		on_press: app.open_settings()
 	Button:
 		text: "Bite"
+		on_press: app.game.toggle_bite_mode()
 	Button:
 		text: "Rotate"
 		on_press: app.game.rotate_new_piece()
