--- a/fungus.kv
+++ b/fungus.kv
@@ -101,7 +101,8 @@
 		text: 'Algae'
 	GridLayout:
 		id: bites_grid
-		cols: 5
+		cols: 8
+		col_default_width: 32
 		x: self.parent.x + 16
 		y: self.parent.top - self.height - 32
 
